--- a/package.json
+++ b/package.json
@@ -15,17 +15,16 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
-    "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^3.0.1",
-    "gatsby-plugin-mdx": "^2.1.0",
     "gatsby-plugin-netlify-cms": "^5.1.0",
-    "gatsby-plugin-styled-components": "^4.1.0",
     "gatsby-source-filesystem": "^3.1.0",
     "netlify-cms-app": "^2.14.29",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "styled-components": "^5.2.1"
+    "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2"
   }
 }
